refactor: restore retirement app

--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -61,7 +61,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:cardCornerRadius="0dp"
             app:cardElevation="2dp"
 
